Security: Remove personal Tailscale domain, replace with generic placeholder

--- a/options.html
+++ b/options.html
@@ -198,7 +198,7 @@
             <strong>Use this for remote gateways via Tailscale or HTTPS.</strong><br>
             Examples:
             <ul style="margin: 8px 0; padding-left: 20px;">
-              <li><code>https://ip-172-31-9-18.tail16f782.ts.net/relay</code> (Tailscale)</li>
+              <li><code>https://your-gateway.tailscale.ts.net/relay</code> (Tailscale)</li>
               <li><code>https://gateway.example.com/relay</code> (HTTPS)</li>
             </ul>
             Leave empty to use local port configuration below.
